--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
               </div>
             </div>
             <div class="col-xl-3 grid-margin-lg-0 grid-margin stretch-card">
-              <div class="card">
+              <div class="card card-margin">
                 <div class="card-body">
                     <h4 class="card-title mb-3">Overall rating</h4>
                     <div class="d-flex">
